@@ -199,48 +199,13 @@ namespace Mono.Cecil.Signatures {
 		public override void VisitMethodDefSig (MethodDefSig methodDef)
 		{
 			int start;
-			Utilities.ReadCompressedInteger (m_blobData, (int) methodDef.BlobIndex, out start);
-			methodDef.CallingConvention = m_blobData [start];
-			start++;
-			methodDef.HasThis = (methodDef.CallingConvention & 0x20) != 0;
-			methodDef.ExplicitThis = (methodDef.CallingConvention & 0x40) != 0;
-			if ((methodDef.CallingConvention & 0x5) != 0)
-				methodDef.MethCallConv |= MethodCallingConvention.VarArg;
-			else if ((methodDef.CallingConvention & 0x10) != 0) {
-				methodDef.MethCallConv |= MethodCallingConvention.Generic;
-				methodDef.GenericParameterCount = Utilities.ReadCompressedInteger (m_blobData, start, out start);
-			} else
-				methodDef.MethCallConv |= MethodCallingConvention.Default;
-
-			methodDef.ParamCount = Utilities.ReadCompressedInteger (m_blobData, start, out start);
-			methodDef.RetType = this.ReadRetType (m_blobData, start, out start);
-			methodDef.Parameters = this.ReadParameters (methodDef.ParamCount, m_blobData, start);
+			ReadMethodDefSig (methodDef, m_root.Streams.BlobHeap.Read (methodDef.BlobIndex), 0, out start);
 		}
 
 		public override void VisitMethodRefSig (MethodRefSig methodRef)
 		{
 			int start;
-			Utilities.ReadCompressedInteger (m_blobData, (int) methodRef.BlobIndex, out start);
-			methodRef.CallingConvention = m_blobData [start];
-			methodRef.HasThis = (methodRef.CallingConvention & 0x20) != 0;
-			methodRef.ExplicitThis = (methodRef.CallingConvention & 0x40) != 0;
-			if ((methodRef.CallingConvention & 0x1) != 0)
-				methodRef.MethCallConv |= MethodCallingConvention.C;
-			else if ((methodRef.CallingConvention & 0x2) != 0)
-				methodRef.MethCallConv |= MethodCallingConvention.StdCall;
-			else if ((methodRef.CallingConvention & 0x3) != 0)
-				methodRef.MethCallConv |= MethodCallingConvention.ThisCall;
-			else if ((methodRef.CallingConvention & 0x4) != 0)
-				methodRef.MethCallConv |= MethodCallingConvention.FastCall;
-			else if ((methodRef.CallingConvention & 0x5) != 0)
-				methodRef.MethCallConv |= MethodCallingConvention.VarArg;
-			else
-				methodRef.MethCallConv |= MethodCallingConvention.Default;
-			methodRef.ParamCount = Utilities.ReadCompressedInteger (m_blobData, start + 1, out start);
-			methodRef.RetType = this.ReadRetType (m_blobData, start, out start);
-			int sentpos;
-			methodRef.Parameters = this.ReadParameters (methodRef.ParamCount, m_blobData, start, out sentpos);
-			methodRef.Sentinel = sentpos;
+			ReadMethodRefSig (methodRef, m_root.Streams.BlobHeap.Read (methodRef.BlobIndex), 0, out start);
 		}
 
 		public override void VisitFieldSig (FieldSig field)
@@ -272,6 +237,50 @@ namespace Mono.Cecil.Signatures {
 			localvar.Local = (localvar.CallingConvention & 0x7) != 0;
 			localvar.Count = Utilities.ReadCompressedInteger (m_blobData, start + 1, out start);
 			localvar.LocalVariables = this.ReadLocalVariables (localvar.Count, m_blobData, start);
+		}
+
+		void ReadMethodDefSig (MethodDefSig methodDef, byte [] data, int pos, out int start)
+		{
+			methodDef.CallingConvention = data [pos];
+			start = pos + 1;
+			methodDef.HasThis = (methodDef.CallingConvention & 0x20) != 0;
+			methodDef.ExplicitThis = (methodDef.CallingConvention & 0x40) != 0;
+			if ((methodDef.CallingConvention & 0x5) != 0)
+				methodDef.MethCallConv |= MethodCallingConvention.VarArg;
+			else if ((methodDef.CallingConvention & 0x10) != 0) {
+				methodDef.MethCallConv |= MethodCallingConvention.Generic;
+				methodDef.GenericParameterCount = Utilities.ReadCompressedInteger (data, start, out start);
+			} else
+				methodDef.MethCallConv |= MethodCallingConvention.Default;
+
+			methodDef.ParamCount = Utilities.ReadCompressedInteger (data, start, out start);
+			methodDef.RetType = this.ReadRetType (data, start, out start);
+			methodDef.Parameters = this.ReadParameters (methodDef.ParamCount, data, start);
+		}
+
+		void ReadMethodRefSig (MethodRefSig methodRef, byte [] data, int pos, out int start)
+		{
+			methodRef.CallingConvention = data [pos];
+			start = pos + 1;
+			methodRef.HasThis = (methodRef.CallingConvention & 0x20) != 0;
+			methodRef.ExplicitThis = (methodRef.CallingConvention & 0x40) != 0;
+			if ((methodRef.CallingConvention & 0x1) != 0)
+				methodRef.MethCallConv |= MethodCallingConvention.C;
+			else if ((methodRef.CallingConvention & 0x2) != 0)
+				methodRef.MethCallConv |= MethodCallingConvention.StdCall;
+			else if ((methodRef.CallingConvention & 0x3) != 0)
+				methodRef.MethCallConv |= MethodCallingConvention.ThisCall;
+			else if ((methodRef.CallingConvention & 0x4) != 0)
+				methodRef.MethCallConv |= MethodCallingConvention.FastCall;
+			else if ((methodRef.CallingConvention & 0x5) != 0)
+				methodRef.MethCallConv |= MethodCallingConvention.VarArg;
+			else
+				methodRef.MethCallConv |= MethodCallingConvention.Default;
+			methodRef.ParamCount = Utilities.ReadCompressedInteger (data, start, out start);
+			methodRef.RetType = this.ReadRetType (data, start, out start);
+			int sentpos;
+			methodRef.Parameters = this.ReadParameters (methodRef.ParamCount, data, start, out sentpos);
+			methodRef.Sentinel = sentpos;
 		}
 
 		LocalVarSig.LocalVariable [] ReadLocalVariables (int length, byte [] data, int pos)
@@ -433,16 +442,15 @@ namespace Mono.Cecil.Signatures {
 				p.CustomMods = this.ReadCustomMods (data, start, out start);
 				p.PtrType = this.ReadType (data, start, out start);
 				return p;
-			case ElementType.FnPtr : // TODO does it work ?
-				pos++;
+			case ElementType.FnPtr :
 				FNPTR fp = new FNPTR ();
-				if ((data [pos] & 0x5) != 0) {
-					MethodRefSig mr = new MethodRefSig ((uint) pos);
-					mr.Accept (this);
+				if ((data [start] & 0x5) != 0) {
+					MethodRefSig mr = new MethodRefSig ((uint) start);
+					ReadMethodRefSig (mr, data, start, out start);
 					fp.Method = mr;
 				} else {
-					MethodDefSig md = new MethodDefSig ((uint) pos);
-					md.Accept (this);
+					MethodDefSig md = new MethodDefSig ((uint) start);
+					ReadMethodDefSig (md, data, start, out start);
 					fp.Method = md;
 				}
 				return fp;
